<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    <ScrollView
        android:id="@+id/scroll" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:id="@+id/llout">
     <LinearLayout 
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/checkback"
        android:orientation="vertical" >
    	 <ImageView
	        android:id="@+id/foodpic"
	        android:layout_width="120dp"
	        android:layout_height="120dp"
	        android:layout_marginTop="10dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/foodpic" />
    	 <LinearLayout 
         	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="15dp">
  	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_marginLeft="18dp"
	        android:text="@string/c_showname"
	        android:textSize="20sp"
	        android:textColor="#000000" />
   		 <TextView
   		    android:id="@+id/shopname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_marginLeft="5dp"
	        android:textSize="18sp"
	        android:textColor="#000000" />
    	 </LinearLayout>
    	 <LinearLayout 
         	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="5dp">
     	 <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_marginLeft="18dp"
	        android:text="@string/c_showaddress"
	        android:textSize="20sp" 
	        android:textColor="#000000"/>
    	  <TextView
    	    android:id="@+id/shopaddress"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_marginLeft="5dp"
	        android:textSize="18sp" 
	        android:textColor="#000000"/>
     	 </LinearLayout>
      	 <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:layout_marginLeft="18dp"
	            android:layout_marginTop="10dp"
	            android:text="@string/c_showdish"
	            android:textSize="20sp"
	            android:textColor="#000000" />
      	 <TextView
      	     	android:id="@+id/dishes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginLeft="15dp"
	            android:layout_marginTop="10dp"
	            android:textSize="18sp" 
	            android:textColor="#000000"/>
         <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_marginLeft="18dp"
	        android:text="@string/c_showopnion"
	        android:textSize="20sp"
	        android:textColor="#000000" />
         <TextView
             android:id="@+id/opinions"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center_horizontal"
	         android:layout_marginLeft="15dp"
	         android:layout_marginTop="10dp"
	         android:textSize="18sp" 
	         android:textColor="#000000"/>
         <LinearLayout 
         	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="8dp">
     	 <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_marginLeft="18dp"
	        android:text="@string/c_score"
	        android:textSize="20sp"
	        android:textColor="#000000" />
   	  	 <TextView
   	  	    android:id="@+id/rating"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginLeft="5dp"
	        android:textSize="18sp"
	        android:textColor="#000000" />
    	  </LinearLayout>
    	  </LinearLayout>
    	  <LinearLayout 
    	      android:id="@+id/message"
    	      android:layout_width="250dp"
   			  android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_marginTop="10dp"
              android:paddingLeft="5dp"
              android:paddingTop="3dp"
              android:paddingBottom="5dp"
              android:layout_gravity="center_horizontal"
              android:background="@drawable/back">
    	      
    	  </LinearLayout>
    	  <LinearLayout
    	    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="10dp"
	        android:layout_marginLeft="23dp"
	        android:layout_marginBottom="5dp" >
          <EditText 
              android:id="@+id/content"
	          android:paddingLeft="5dp"
	          android:paddingTop="5dp"
	          android:paddingRight="1dp"
	          android:paddingBottom="1dp"
	          android:layout_width="200dp"
	          android:layout_height="35dp"
	          android:layout_marginLeft="15dp"
	          android:layout_marginTop="5dp"
	          android:background="@drawable/textarea_eat"/>
    	  <Button
    	    android:id="@+id/leave" 
    	    android:layout_width="70dp"
	        android:layout_height="43dp"
	        android:layout_marginLeft="5dp"
	        android:layout_marginBottom="5dp"
	        android:gravity="center_horizontal"
	        android:background="@layout/button_border2"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        android:text="@string/c_leave" />
    	  </LinearLayout>
    </LinearLayout>
	</ScrollView>
</LinearLayout>